...
    </item>

    <item android:title="@string/drawer_settings_group">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_edit_profile"
                    android:icon="@drawable/ic_person_black_24dp"
                    android:title="@string/drawer_edit_profile">

                </item>
            </group>
        </menu>
    </item>

    <item android:title="@string/drawer_logout_group">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/drawer_logout">
                </item>
            </group>
        </menu>
    </item>
...
