<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="setDuration"
    tools:context=".UploadActivityActivity">

    <EditText
        android:id="@+id/editTextStartTime"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:editable="false"
        android:ems="10"
        android:hint="Time"
        android:onClick="setStartTime"
        app:layout_constraintStart_toEndOf="@+id/editTextDate"
        app:layout_constraintTop_toTopOf="@+id/editTextDate" />

    <TextView
        android:id="@+id/uploadActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Activity"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Title"
        android:inputType="textPersonName"
        android:maxLength="32"
        app:layout_constraintStart_toStartOf="@+id/uploadActivityTitle"
        app:layout_constraintTop_toBottomOf="@+id/uploadActivityTitle" />

    <EditText
        android:id="@+id/editTextNParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Number of participants"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toEndOf="@+id/spinnerSportType"
        app:layout_constraintTop_toTopOf="@+id/spinnerSportType" />

    <Spinner
        android:id="@+id/spinnerSportType"
        android:layout_width="157dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/editTextTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="155dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:editable="false"
        android:ems="10"
        android:hint="Date"
        android:onClick="setDate"
        app:layout_constraintStart_toStartOf="@+id/spinnerSportType"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSportType" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10"
        android:hint="Duration"
        android:onClick="setDuration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextStartTime"
        app:layout_constraintTop_toTopOf="@+id/editTextDate" />

    <Button
        android:id="@+id/buttonConfirmUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="confirmActivityUpload"
        android:text="Create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.758" />

    <EditText
        android:id="@+id/editTextLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Location"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextTime"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="A short description..."
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/buttonConfirmUpload"
        app:layout_constraintEnd_toEndOf="@+id/editTextLocation"
        app:layout_constraintStart_toStartOf="@+id/editTextLocation"
        app:layout_constraintTop_toBottomOf="@+id/editTextLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>